# Gerdoo_AI

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: analytics_report.py  start.sh  start_admin_panel.sh  start_gemini_server.sh  start_uag_server.sh  sync_uag_env.sh
src/gerdoo_ai_bot/: admin_panel.py  app.py  config.py  main.py  parser.py  service.py  storage.py  types.py  ui.py
src/gerdoo_ai_bot/admin_ui/: app.js  index.html  styles.css
src/gerdoo_ai_bot/clients/: bale_api.py  gemini_proxy.py  uag.py
tests/: test_admin_storage.py  test_config.py  test_gemini_proxy_client.py  test_parser.py  test_service_flow.py  test_storage.py  test_uag_client.py
