[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerdoo-ai-bot"
version = "0.1.0"
description = "Bale AI chat bot powered by Unified AI Gateway (UAG)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1",
  "aiosqlite>=0.20.0,<1",
  "aiomysql>=0.2.0,<1",
  "cryptography>=44.0.0,<45",
  "python-dotenv>=1.0.1,<2",
  "fastapi>=0.115.0,<1",
  "uvicorn>=0.30.0,<1",
  "websockets>=12.0,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "pytest-asyncio>=0.23.0,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
